--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/dist/assets/logo5-50915dc3.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebScrapers</title>
+    <title>Krish Bothra</title>
   </head>
   <body>
     <div id="root"></div>
